accent contrast fix

--- a/webplugin/css/app/mck-sidebox-1.0.css
+++ b/webplugin/css/app/mck-sidebox-1.0.css
@@ -4055,9 +4055,7 @@ ul.mck-intent-menu > li:hover {
     margin: auto;
 }
 
-#mck-tab-conversation {
-    padding-left: 6px;
-}
+
 
 #mck-launcher-icon-svg {
     height: 35px;
